Added files via upload

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "from scipy.optimize import minimize\n",
     "\n",
-    "#Example Problem\n",
+    "################ EXAMPLE PROBLEM ################\n",
+    "\n",
     "CAPACITY = [10000, 12000, 14000]\n",
     "DEMAND = [9000, 6000, 6000, 13000]\n",
     "COST = np.array([[5, 3.5, 4.2, 2.2],\n",
@@ -45,13 +46,13 @@
     "\n",
     "res = minimize(total_cost, x0, method = 'SLSQP', constraints = cons, bounds = bnds)\n",
     "min_cost = res.fun\n",
-    "solution1 = res.x.reshape(3,4)\n",
-    "solution1 = np.rint(solution1)"
+    "solution = res.x.reshape(3,4)\n",
+    "solution = np.rint(solution)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -63,6 +64,76 @@
       "[[     0.      0.      0.  10000.]\n",
       " [     0.   3000.   6000.   3000.]\n",
       " [  9000.   3000.      0.      0.]] Minimum Cost: $ 86800.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(solution, 'Minimum Cost: $', min_cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "################ PROBLEM 1 ################\n",
+    "\n",
+    "CAPACITY = [10000, 12000, 5000]\n",
+    "DEMAND = [9000, 6000, 6000, 13000]\n",
+    "COST = np.array([[5, 3.5, 4.2, 2.2],\n",
+    "                 [3.2, 2.6, 1.8, 4.8],\n",
+    "                 [2.5, 3.1, 3.3, 5.4]])\n",
+    "COST = COST.flatten()\n",
+    "\n",
+    "x0 = [0]*12\n",
+    "bnds = tuple((0,14000) for x in x0)\n",
+    "\n",
+    "#Set constraints\n",
+    "def con_la_capacity(x): return CAPACITY[0] - (x[0] + x[1] + x[2] + x[3])\n",
+    "def con_atl_capacity(x): return CAPACITY[1] - (x[4] + x[5] + x[6] + x[7])\n",
+    "def con_ny_capacity(x): return CAPACITY[2] - (x[8] + x[9] + x[10] + x[11])\n",
+    "def con_all_capacity(x): return sum(CAPACITY) - sum(x)\n",
+    "def con_e_demand(x): return DEMAND[0] - (x[0] + x[4] + x[8])\n",
+    "def con_mw_demand(x): return DEMAND[1] - (x[1] + x[5] + x[9])\n",
+    "def con_s_demand(x): return DEMAND[2] - (x[2] + x[6] + x[10])\n",
+    "def con_w_demand(x): return DEMAND[3] - (x[3] + x[7] + x[11])\n",
+    "\n",
+    "cons = [{'type': 'ineq', 'fun': con_la_capacity},\n",
+    "        {'type': 'ineq', 'fun': con_atl_capacity},\n",
+    "        {'type': 'ineq', 'fun': con_ny_capacity},\n",
+    "        {'type': 'eq', 'fun': con_all_capacity},        \n",
+    "        {'type': 'ineq', 'fun': con_e_demand},\n",
+    "        {'type': 'ineq', 'fun': con_mw_demand},\n",
+    "        {'type': 'ineq', 'fun': con_s_demand},\n",
+    "        {'type': 'ineq', 'fun': con_w_demand}]\n",
+    "\n",
+    "def total_cost(x):\n",
+    "    cost = sum([a*b for a,b in zip(x,COST)])\n",
+    "    return cost\n",
+    "\n",
+    "res = minimize(total_cost, x0, method = 'SLSQP', constraints = cons, bounds = bnds)\n",
+    "min_cost = res.fun\n",
+    "solution1 = res.x.reshape(3,4)\n",
+    "solution1 = np.rint(solution1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2744.  2249.  2244.  2763.]\n",
+      " [ 3252.  2751.  2757.  3241.]\n",
+      " [ 1510.  1001.   999.  1490.]] Minimum Cost: $ 93390.3762121\n"
      ]
     }
    ],
