Added files via upload

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,6 @@
     "################ PROBLEM 1 ################\n",
     "\n",
     "CAPACITY = [10000, 12000, 5000]\n",
-    "DEMAND = [9000, 6000, 6000, 13000]\n",
     "COST = np.array([[5, 3.5, 4.2, 2.2],\n",
     "                 [3.2, 2.6, 1.8, 4.8],\n",
     "                 [2.5, 3.1, 3.3, 5.4]])\n",
@@ -96,19 +95,11 @@
     "def con_atl_capacity(x): return CAPACITY[1] - (x[4] + x[5] + x[6] + x[7])\n",
     "def con_ny_capacity(x): return CAPACITY[2] - (x[8] + x[9] + x[10] + x[11])\n",
     "def con_all_capacity(x): return sum(CAPACITY) - sum(x)\n",
-    "def con_e_demand(x): return DEMAND[0] - (x[0] + x[4] + x[8])\n",
-    "def con_mw_demand(x): return DEMAND[1] - (x[1] + x[5] + x[9])\n",
-    "def con_s_demand(x): return DEMAND[2] - (x[2] + x[6] + x[10])\n",
-    "def con_w_demand(x): return DEMAND[3] - (x[3] + x[7] + x[11])\n",
     "\n",
     "cons = [{'type': 'ineq', 'fun': con_la_capacity},\n",
     "        {'type': 'ineq', 'fun': con_atl_capacity},\n",
     "        {'type': 'ineq', 'fun': con_ny_capacity},\n",
-    "        {'type': 'eq', 'fun': con_all_capacity},        \n",
-    "        {'type': 'ineq', 'fun': con_e_demand},\n",
-    "        {'type': 'ineq', 'fun': con_mw_demand},\n",
-    "        {'type': 'ineq', 'fun': con_s_demand},\n",
-    "        {'type': 'ineq', 'fun': con_w_demand}]\n",
+    "        {'type': 'eq', 'fun': con_all_capacity}]\n",
     "\n",
     "def total_cost(x):\n",
     "    cost = sum([a*b for a,b in zip(x,COST)])\n",
@@ -122,22 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2744.  2249.  2244.  2763.]\n",
-      " [ 3252.  2751.  2757.  3241.]\n",
-      " [ 1510.  1001.   999.  1490.]] Minimum Cost: $ 93390.3762121\n"
+      "[[     0.      0.      0.  10000.]\n",
+      " [     0.      0.  12000.      0.]\n",
+      " [  5000.      0.      0.      0.]] Minimum Cost: $ 56100.0000005\n"
      ]
     }
    ],
    "source": [
+    "#Solution with unconstrained demand\n",
     "print(solution1, 'Minimum Cost: $', min_cost)"
    ]
   },
